--- a/style.css
+++ b/style.css
@@ -1,34 +1,42 @@
-header {
-    background-color: #FFE600; 
-    padding: 10px 0;
-    text-align: center;
-    position: relative;
+.sidebar {
+    width: 60px;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: #ffffff;
+    transition: ease-in-out 0.3s;
+    overflow: hidden;
 }
 
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
+.sidebar:hover {
+    width: 200px;
+}
+.sidebar:hover > .item> .text {
+    opacity: 1;
 }
 
-.header-buttons {
+hr {
+    height: 1px;
+    color: #919191;
+    margin: 15px 0;
+}
+.item {
     display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 10px;
+    align-items: center;
+    margin: 20px 0;
+
 }
 
-.login-buttons {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    gap: 10px;
+.item .icon {
+    width: 40px;
+    height: 35px;
+    flex-shrink: 0;
+    fill: #424242;
 }
-
-.category-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 10px;
+.item .text {
+    opacity: 0;
+    transition: ease-in-out 0.3s;
+    transition-delay: .2s;
+    margin-left: 15px;
+    white-space:  nowrap;
 }
