imagen-texto-profile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .container {
     display: flex;
@@ -6,11 +14,11 @@
 
 .sidebar {
     width: 50px;
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
     padding: 10px;
     background-color: #ffffff;
-    transition: ease-in-out 0.3s;
+    transition: width 0.3s ease-in-out;
     overflow: hidden;
 }
 
@@ -18,12 +26,51 @@
     width: 150px;
 }
 
-.sidebar:hover > .item> .text {
+.item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+
+.text {
+    font-size: 16px;
+    opacity: 0; /* Hides text by default */
+    transition: opacity 0.3s ease-in-out;
+}
+
+/* Show text on hover */
+.sidebar:hover .item .text {
     opacity: 1;
 }
 
-.center-container {
+hr {
+    margin: 15px 0;
+    border: 0;
+    border-top: 1px solid #ccc;
+}
+
+.content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+section {
+    display: flex;
+    flex: 1;
+    width: 600px;
+    height: 430px;
+}
+
+
+
+.center-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,6 +78,66 @@
     margin-top: 20px;
 }
 
+.profile-container {
+    display: flexbox end;
+}
 
+.categories {
+    color: inherit;
+    text-decoration: none;
+    transition: ease;
+}
 
+body {
+    font-family: sans-serif;
+    line-height: 1.5;
+    min-height:  1.5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
 
+}
+a{
+    color: inherit;
+
+    text-decoration: none;
+    transition: 0.25 ease;
+
+}
+ul{
+display: flex;
+flex-wrap: wrap;
+list-style-type: none;
+
+}
+ul li{
+    margin-left: 0.75em;
+    margin-right:  0.75em;
+
+}
+ul:hover a{
+    color: #ccc;
+}
+ul:hover a:hover{
+    color: #000;
+    box-shadow: 0 2px 0 0 currentColor;
+}
+movenot{
+  
+    
+    #movenot {
+        position: fixed;
+        text-align: center;
+        background-color: #f0f0f0;
+        padding: 20px;
+        border-radius: 10px;
+    }
+    
+    #movenot img {
+        width: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
+        height: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
+        margin-bottom: 10px;
+    }
+    
+}
