--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ ul:hover a:hover{
     color: #000;
     box-shadow: 0 2px 0 0 currentColor;
 }
-movenot{
+.movenot{
   
     
     #movenot {
@@ -140,4 +140,46 @@ movenot{
         margin-bottom: 10px;
     }
     
+}
+.sidebar {
+    text-decoration: none;
+    color: #333;
+}
+
+.button{
+    text-decoration: none;
+    color: #333;
+}
+.category-follow {
+    background-color: #1877F2;
+    color: #ffffff;
+    padding: 2px 5px;
+    text-decoration: none;
+    border: 1px solid #1877F2;
+    border-radius: 20px;
+    display: inline-block;
+}
+
+.h1{
+    text-align: center;
+    position: absolute;
+    width: 80%;
+    margin: 50px auto;
+}
+.img-gallery{
+    display: flex;
+    width: 500px;
+    height: 300px;
+}
+.img-gallery img{
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    filter: brightness(80%);
+    transition: 3s ease;
+}
+.img-gallery img:hover{
+    width: 500px;
+    opacity: 1;
+    filter: brightness(130%);
 }
