--- a/style.css
+++ b/style.css
@@ -61,15 +61,6 @@ hr {
     flex-direction: column;
 }
 
-section {
-    display: flex;
-    flex: 1;
-    width: 600px;
-    height: 430px;
-}
-
-
-
 .center-container {
     display: flex;
     align-items: center;
@@ -160,12 +151,7 @@ ul:hover a:hover{
     display: inline-block;
 }
 
-.h1{
-    text-align: center;
-    position: absolute;
-    width: 80%;
-    margin: 50px auto;
-}
+
 .img-gallery{
     display: flex;
     width: 500px;
@@ -182,4 +168,12 @@ ul:hover a:hover{
     width: 500px;
     opacity: 1;
     filter: brightness(130%);
+}
+.h1-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+    align-self: center;
 }
